Don't commit .env or let someone else accidentally do it.

--- a/.gitignore
+++ b/.gitignore
@@ -15,6 +15,9 @@ workAssets
 coverage
 public/.vite
 
+# Be careful about deleting this line below. Very easy to accidentally expose some secrets used in environment variables by committing the .env file.
+.env
+
 # Editor directories and files
 .vscode/*
 !.vscode/extensions.json
