--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "decentapp-template",
   "private": true,
-  "version": "2.1.3",
+  "version": "2.3.0",
   "type": "module",
   "scripts": {
     "dev": "vite",
@@ -18,7 +18,7 @@
     "@mlc-ai/web-llm": "^0.2.79",
     "@mlc-ai/web-runtime": "^0.18.0-dev2",
     "@mlc-ai/web-tokenizers": "^0.1.6",
-    "decent-portal": "^1.2.3",
+    "decent-portal": "file:../decent-portal/decent-portal-2.0.0.tgz",
     "react": "^19.1.0",
     "react-dom": "^19.1.0"
   },
