--- a/public/app-metadata.json
+++ b/public/app-metadata.json
@@ -1,8 +1,8 @@
 {
-  "id":"Decent App",
+  "id":"decent-app",
   "name":"Decent App",
   "description":"TODO replace this with a description of your app.",
   "supportedModels":[
-    {"id":"Llama-3.1-8B-Instruct-q4f16_1-MLC-1k","appBehaviorSummary":"2025 Decent App default model"}
+    {"id":"Llama-3.1-8B-Instruct-q4f16_1-MLC-1k","appBehaviorSummary":"2025 Decent default model"}
   ]
 }
